tests/regression/errors/basic/import_error_14.csd
// Import error test 14
yeet "nonexistent_module_14"
sus result drip = some_function(14)
